fix bug gson